--- a/src/Input/Input.css
+++ b/src/Input/Input.css
@@ -1,15 +1,43 @@
-input {
-	padding: .4em 1em;
-  box-shadow: inset 1px 1px rgba(0,0,0,.03);
+.form-control {
+  max-width: 20rem;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  margin-top: 1.25rem;
+}
+
+label {
+  font-weight: 500;
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+  padding-bottom: 4px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input[type="text"], input[type="number"] {
+  width: 100%;
+	padding: .3em .5em;
+  height: 1.5rem;
+  line-height: 2.5rem;
   border: 1px solid #e6e6e6;
   background: #fff;
   min-height: 1.5em;
   font-size: 1em;
   color: #444;
+  border-radius: 0.25rem;
 }
 
-input:hover, input:focus {
+input:focus {
   border: 1px solid #009682;
-  color: #444;
 	outline: none;
 }
